// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly enzyme mount 1`] = `
<Basic>
  <div>
    <h1>
       Basic Test
    </h1>
    <p>
       This is a basic Test Component
    </p>
  </div>
</Basic>
`;

exports[`renders correctly enzyme shallow 1`] = `
<div>
  <h1>
     Basic Test
  </h1>
  <p>
     This is a basic Test Component
  </p>
</div>
`;
